# appsec-tools-kit

./: README.md  main.py  pyproject.toml  renovate.json
.github/workflows/: tests.yml
appsec_kit/: cli.py  detector.py  updater.py  versions.py  writer.py
appsec_kit/templates/: node_templates.py  python_templates.py
tests/: test_cli.py  test_detector.py  test_templates.py  test_versions.py  test_writer.py
