[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "appsec-tool-kit"
version = "0.1.0"
description = "Interactive CLI to configure security tools for CI/CD pipelines"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "questionary>=2.0",
    "rich>=13.0",
]

[project.scripts]
appsec-kit = "appsec_kit.cli:run"

[tool.hatch.build.targets.wheel]
packages = ["appsec_kit"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
